# capricorn

./: .env  .gitignore  Cargo.toml
capricorn-core/: Cargo.toml
capricorn-email/: Cargo.toml
capricorn-email/src/: main.rs
capricorn-identity/: .env  .env.docker  Cargo.toml  README.md
capricorn-identity/migrations/2020-12-09-160904_create_user/: up.sql
capricorn-identity/migrations/2020-12-09-161447_create_profile/: up.sql
capricorn-identity/migrations/2020-12-09-161659_create_user_login_account/: up.sql
capricorn-identity/proto/: client_service.proto  user_service.proto
capricorn-identity/src/: cache.rs  config.rs  database.rs  main.rs
capricorn-lab/: Cargo.toml  Dockerfile
capricorn-lab/migrations/2020-11-08-135043_create_provider/: up.sql
capricorn-lab/migrations/2020-11-09-113157_create_application/: up.sql
capricorn-lab/src/: constants.rs  datasource.rs  main.rs  routes.rs  server.rs
capricorn-lab/src/handlers/: lab.rs
capricorn-lab/src/middlewares/: authorization.rs
capricorn-lab/src/repository/: lab.rs  mod.rs  mqtt.rs
capricorn-lab/src/schemas/: lab.rs  message.rs  mod.rs  mqtt.rs  provider.rs  service.rs
capricorn-lab/src/services/: message_service.rs  mod.rs
capricorn-lab/src/tests/: helpers.rs
capricorn-lab/src/utils/: jwt.rs
capricorn-ml/: Cargo.toml
capricorn-rpc/: Cargo.toml
capricorn-rpc/proto/: helloworld.proto  message.proto
capricorn-rtc/: Cargo.toml
capricorn-sms/: Cargo.toml
capricorn-socket/: Cargo.toml
capricorn-socket/src/: handlers.rs  lab.rs  lib.rs  main.rs  message.rs  planet.rs  server.rs  session.rs  socket.rs
capricorn-socket/src/handlers/: mod.rs
capricorn-socket/static/: websocket.html
capricorn-tools/: Cargo.toml
capricorn-web/: .env  .env.docker  Cargo.toml  Dockerfile
capricorn-web/migrations/2020-11-08-135043_create_provider/: down.sql  up.sql
capricorn-web/migrations/2020-11-08-135043_create_user/: up.sql
capricorn-web/migrations/2020-11-09-113157_create_application/: down.sql  up.sql
capricorn-web/migrations/2020-11-09-113157_create_function/: down.sql  up.sql
capricorn-web/src/: .env  cache.rs  config.rs  constants.rs  database.rs  datasource.rs  errors.rs  handlers.rs  kafka.rs  main.rs  routes.rs  schema.rs  server.rs  state.rs
capricorn-web/src/datasource/: cache.rs  mod.rs
capricorn-web/src/handlers/: mod.rs  notify.rs  websocket.rs
capricorn-web/src/middleware/: authorization.rs
capricorn-web/src/middlewares/: jwt_authorization.rs  mod.rs
capricorn-web/src/schemas/: application.rs  company.rs  developer.rs  function.rs  message.rs  message_type.rs  mod.rs  provider.rs  root.rs  serv_app.rs  service_application.rs  service_provider.rs  user.rs
capricorn-web/src/tests/: helpers.rs
capricorn-web/src/utils/: jwt.rs
keys/: key.pem  secret.pem
moon/: Cargo.toml
moon/src/: entity.rs  handlers.rs  main.rs  message.rs  moon.rs  server.rs  session.rs
