[package]
name = "capricorn-rpc"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
rand = "0.7"
redis = "0.18"
rdkafka = {version = "0.24", default-features = false}
serde = "1"
serde_derive = "1"
serde_json = "1"
slug="0.1"
tonic = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }

validator = "0.12"
validator_derive = "0.12"
