[package]
name = "capricorn-socket"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3"
actix-codec = "0.3"

rand = "0.7"
bytes = "0.5"
byteorder = "1"
futures = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"