[package]
name = "capricorn-web"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"

argon2rs = "0.2"
chrono ={version = "0.4",features = ["serde"]}

derive_more = "0.99"

diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres", "r2d2", "serde_json","uuid"]}

dotenv = "0.15"
envy = "0.4"
# env_logger = "0.7"
futures = "0.3"
jsonwebtoken = "7"
lazy_static = "1"
rand = "0.8"
redis = "0.19"
# rdkafka = {version = "0.24", default-features = false}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug="0.1"

uuid = { version = "0.8", features = ["serde", "v4"] }

validator = "0.12"
validator_derive = "0.12"

[dev-dependencies]
actix-rt = "2"