[package]
name = "moon"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.5"
actix-codec = "0.3"

rand = "0.8"
bytes = "1"
byteorder = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
actix-rt = "2"
serde_json = "1"